--- a/CC.Web/index.html
+++ b/CC.Web/index.html
@@ -8,7 +8,7 @@
             display: none!important;
         }
     </style>
-    <title data-ng-bind="title">Hot Towel Angular</title>
+    <title data-ng-bind="title">CodeCamper Angular-Breeze</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
@@ -23,6 +23,7 @@
         }
     </script>
 
+    <link rel="shortcut icon" href="ccfavicon.ico" />
     <link href="content/ie10mobile.css" rel="stylesheet" />
     <link href="content/bootstrap.min.css" rel="stylesheet" />
     <link href="content/font-awesome.min.css" rel="stylesheet" />
@@ -37,7 +38,7 @@
         <div id="splash-page" data-ng-show="false">
             <div class="page-splash">
                 <div class="page-splash-message">
-                    Hot Towel Angular
+                    CodeCamper Angular-Breeze
                 </div>
                 <div class="progress progress-striped active page-progress-bar">
                     <div class="bar"></div>
@@ -60,8 +61,8 @@
     <script src="scripts/ui-bootstrap-tpls-0.10.0.js"></script>
     <script src="scripts/spin.js"></script>
     <script src="scripts/breeze.debug.js"></script>
+    <script src="scripts/breeze.bridge.angular.js"></script>
     <script src="scripts/breeze.directives.js"></script>
-    <script src="scripts/breeze.to$q.shim.js"></script>
     <script src="scripts/breeze.saveErrorExtensions.js"></script>
 
     <!-- Bootstrapping -->
@@ -83,6 +84,7 @@
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/layout/shell.js"></script>
     <script src="app/layout/sidebar.js"></script>
+    <script src="app/session/sessions.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
