--- a/CC.Web/index.html
+++ b/CC.Web/index.html
@@ -84,11 +84,12 @@
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/layout/shell.js"></script>
     <script src="app/layout/sidebar.js"></script>
-    <script src="app/session/sessions.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
     <script src="app/services/directives.js"></script>
     <script src="app/services/entityManagerFactory.js"></script>
+    <script src="app/services/model.js"></script>
+    <script src="app/session/sessions.js"></script>
 </body>
 </html>
