--- a/CC.Web/index.html
+++ b/CC.Web/index.html
@@ -80,10 +80,11 @@
     <script src="app/common/bootstrap/bootstrap.dialog.js"></script>
 
     <!-- app -->
-    <script src="app/admin/admin.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/layout/shell.js"></script>
     <script src="app/layout/sidebar.js"></script>
+    <script src="app/speaker/speakers.js"></script>
+    <script src="app/attendee/attendees.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
