Add code from module 07

--- a/CC.Web/index.html
+++ b/CC.Web/index.html
@@ -92,5 +92,6 @@
     <script src="app/services/entityManagerFactory.js"></script>
     <script src="app/services/model.js"></script>
     <script src="app/session/sessions.js"></script>
+    <script src="app/services/routemediator.js"></script>
 </body>
 </html>
