Add code from module 08

--- a/CC.Web/app/speaker/speakers.html
+++ b/CC.Web/app/speaker/speakers.html
@@ -3,6 +3,8 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="form-search">
+                    <input class="input-lg search-query" data-ng-model="vm.speakerSearch"
+                           data-ng-keyup="vm.search($event)" placeholder="live search..."/>
                     <div class="btn-group pull-right">
                         <a class="btn btn-info" data-ng-click="vm.refresh()">
                             <i class="glyphicon glyphicon-refresh"></i><span>Refresh</span>
@@ -12,9 +14,10 @@
             </div>
             <div class="row-fluid">
                 <div class="widget wviolet">
-                    <div data-cc-widget-header title="{{vm.title}}" subtitle="{{vm.speakers.length}}"></div>
+                    <div data-cc-widget-header title="{{vm.title}}"
+                         subtitle="{{vm.filteredSpeakers.length}} / {{vm.speakers.length}}"></div>
                     <div class="widget-content user">
-                        <div class="padd list-flow" data-ng-repeat="s in vm.speakers">
+                        <div class="padd list-flow" data-ng-repeat="s in vm.filteredSpeakers">
                             <div class="user">
                                 <img data-cc-img-person="{{s.imageSource}}" class="img-polaroid stacked" />
                                 <div class="name-stack">
