--- a/CC.Web/app/attendee/attendees.html
+++ b/CC.Web/app/attendee/attendees.html
@@ -3,6 +3,8 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="form-search">
+                    <input class="input-lg search-query" data-ng-model="vm.attendeeSearch"
+                           data-ng-keyup="vm.search($event)" placeholder="live search..." />
                     <div class="btn-group pull-right">
                         <a class="btn btn-info" data-ng-click="vm.refresh()">
                             <i class="glyphicon glyphicon-refresh"></i><span>Refresh</span>
@@ -12,7 +14,10 @@
             </div>
             <div class="row-fluid">
                 <div class="widget wgreen">
-                    <div data-cc-widget-header title="{{vm.title}}" subtitle="{{vm.attendees.length}}"></div>
+                    <div data-cc-widget-header title="{{vm.title}}"
+                         subtitle="{{vm.attendeeFilteredCount}} / {{vm.attendeeCount}}"
+                         right-text="Page {{vm.paging.currentPage}} of {{vm.paging.pageCount}}">
+                    </div>
                     <div class="widget-content user">
                         <div class="padd list-flow" data-ng-repeat="a in vm.attendees">
                             <div class="user">
@@ -26,6 +31,20 @@
                     </div>
                 </div>
                 <div class="widget-foot">
+                    <div class="clearfix"></div>
+                    <pagination boundary-links="true"
+                                on-select-page="vm.pageChanged(page)"
+                                total-items="vm.attendeeFilteredCount"
+                                items-per-page="vm.paging.pageSize"
+                                page="vm.paging.currentPage"
+                                max-size="vm.paging.maxPagesToShow"
+                                class="pagination-sm"
+                                previous-text="Prev"
+                                next-text="Next"
+                                first-text="First"
+                                last-text="Last">
+
+                    </pagination>
                     <div class="clearfix"></div>
                 </div>
             </div>
