Add code from module 10

--- a/CC.Web/app/dashboard/dashboard.html
+++ b/CC.Web/app/dashboard/dashboard.html
@@ -13,47 +13,102 @@
                         </li>
 
                         <li class="borange">
-                            <div class="pull-left"><i class="fa fa-envelope"></i></div>
-                            <div class="datas-text pull-right">
-                                <span class="bold">{{vm.messageCount}}</span> Messages
-                            </div>
-                            <div class="clearfix"></div>
+                            <a href="#/sessions">
+                                <div class="pull-left"><i class="fa fa-calendar"></i></div>
+                                <div class="datas-text pull-right">
+                                    <span class="bold">{{vm.sessionCount}}</span> Sessions
+                                </div>
+                                <div class="clearfix"></div>
+                            </a>
                         </li>
 
+                        <li class="bgreen">
+                            <a href="#/attendees">
+                                <div class="pull-left"><i class="fa fa-group"></i></div>
+                                <div class="datas-text pull-right">
+                                    <span class="bold">{{vm.attendeeCount}}</span> Attendees
+                                </div>
+                                <div class="clearfix"></div>
+                            </a>
+                        </li>
+
+                        <li class="bviolet">
+                            <a href="#/speakers">
+                                <div class="pull-left"><i class="fa fa-microphone"></i></div>
+                                <div class="datas-text pull-right">
+                                    <span class="bold">{{vm.speakerCount}}</span> Speakers
+                                </div>
+                                <div class="clearfix"></div>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-md-6">
-                    <div class="widget wviolet">
-                        <div data-cc-widget-header title="People"
+                    <div class="widget wgreen">
+                        <div data-cc-widget-header title="{{vm.map.title}}"
+                             allow-collapse="true"></div>
+                        <div class="widget-content">
+                            <div class="map">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2932.13437153879!2d-111.0264108690959!3d29.07865495293817!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86ce83c1aac2ae91%3A0xb200a89b840f3f54!2zMjnCsDA0JzM4LjgiTiAxMTHCsDAxJzMwLjEiVw!5e0!3m2!1sen!2smx!4v1465172361224"
+                                        width="400" height="230" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="widget wlightblue">
+                        <div data-cc-widget-header title="{{vm.speakers.title}}"
                              allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
-                            <table class="table table-condensed table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>First Name</th>
-                                        <th>Last Name</th>
-                                        <th>Age</th>
-                                        <th>Location</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr data-ng-repeat="p in vm.people">
-                                        <td>{{p.firstName}}</td>
-                                        <td>{{p.lastName}}</td>
-                                        <td>{{p.age}}</td>
-                                        <td>{{p.location}}</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <carousel class="carousel-inner" interval="vm.speakers.interval">
+                                <slide data-ng-repeat="s in vm.speakers.list" active="s.active">
+                                    <img data-cc-img-person="{{s.imageSource}}" class="img-polaroid" />
+                                    <div class="carousel-caption">
+                                        <h4>{{s.fullName}}</h4>
+                                    </div>
+                                </slide>
+                            </carousel>
+                        </div>
+                    </div>
+                    <div class="widget-foot">
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="widget wviolet">
+                        <div data-cc-widget-header title="{{vm.content.title}}"
+                             allow-collapse="true"></div>
+                        <div class="widget-content">
+                            <div class="widget-content referrer">
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th><a data-ng-click="vm.content.setSort('track')">Track</a></th>
+                                            <th><a data-ng-click="vm.content.setSort('count')">Session</a></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr data-ng-repeat="t in vm.content.tracks
+                                            | orderBy:vm.content.predicate:vm.content.reverse">
+                                            <td>{{t.track}}</td>
+                                            <td>{{t.count}}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                         <div class="widget-foot">
                             <div class="clearfix"></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <div class="widget wgreen">
                         <div data-cc-widget-header title="{{vm.news.title}}"
                              allow-collapse="true"></div>
