--- a/CC.Web/app/attendee/attendees.html
+++ b/CC.Web/app/attendee/attendees.html
@@ -19,7 +19,7 @@
                          right-text="Page {{vm.paging.currentPage}} of {{vm.paging.pageCount}}">
                     </div>
                     <div class="widget-content user">
-                        <div class="padd list-flow" data-ng-repeat="a in vm.attendees">
+                        <div class="padd list-flow fader-animation" data-ng-repeat="a in vm.attendees">
                             <div class="user">
                                 <img data-cc-img-person="{{a.imageSource}}" class="img-polaroid stacked" />
                                 <div class="name-stack">
