--- a/CC.Web/index.html
+++ b/CC.Web/index.html
@@ -75,13 +75,20 @@
     <script src="app/layout/sidebar.js"></script>
     <script src="app/speaker/speakers.js"></script>
     <script src="app/attendee/attendees.js"></script>
+    <script src="app/session/sessions.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
     <script src="app/services/directives.js"></script>
     <script src="app/services/entityManagerFactory.js"></script>
     <script src="app/services/model.js"></script>
-    <script src="app/session/sessions.js"></script>
     <script src="app/services/routemediator.js"></script>
+
+    <script src="app/services/repositories.js"></script>
+    <script src="app/services/repository.abstract.js"></script>
+    <script src="app/services/repository.attendee.js"></script>
+    <script src="app/services/repository.lookup.js"></script>
+    <script src="app/services/repository.session.js"></script>
+    <script src="app/services/repository.speaker.js"></script>
 </body>
 </html>
