--- a/CC.Web/app/attendee/attendees.html
+++ b/CC.Web/app/attendee/attendees.html
@@ -3,12 +3,13 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="form-search">
-                    <input class="input-lg search-query" data-ng-model="vm.attendeeSearch"
-                           data-ng-keyup="vm.search($event)" placeholder="live search..." />
+                    <input class="input-medium search-query"
+                           data-ng-model="vm.attendeeSearch"
+                           data-ng-keyup="vm.search($event)"
+                           placeholder="live search...">
                     <div class="btn-group pull-right">
-                        <a class="btn btn-info" data-ng-click="vm.refresh()">
-                            <i class="glyphicon glyphicon-refresh"></i><span>Refresh</span>
-                        </a>
+                        <a class="btn btn-info"
+                           data-ng-click="vm.refresh()"><i class="icon-refresh"></i><span>Refresh</span></a>
                     </div>
                 </div>
             </div>
@@ -19,9 +20,11 @@
                          right-text="Page {{vm.paging.currentPage}} of {{vm.paging.pageCount}}">
                     </div>
                     <div class="widget-content user">
-                        <div class="padd list-flow fader-animation" data-ng-repeat="a in vm.attendees">
+                        <div class="padd list-flow fader-animation"
+                             data-ng-repeat="a in vm.attendees">
                             <div class="user">
-                                <img data-cc-img-person="{{a.imageSource}}" class="img-polaroid stacked" />
+                                <img data-cc-img-person="{{a.imageSource}}"
+                                     class="img-polaroid stacked" />
                                 <div class="name-stack">
                                     <h5>{{a.firstName}}</h5>
                                     <h5>{{a.lastName}}</h5>
@@ -29,26 +32,23 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="widget-foot">
-                    <div class="clearfix"></div>
-                    <pagination boundary-links="true"
-                                on-select-page="vm.pageChanged(page)"
-                                total-items="vm.attendeeFilteredCount"
-                                items-per-page="vm.paging.pageSize"
-                                page="vm.paging.currentPage"
-                                max-size="vm.paging.maxPagesToShow"
-                                class="pagination-sm"
-                                previous-text="Prev"
-                                next-text="Next"
-                                first-text="First"
-                                last-text="Last">
-
-                    </pagination>
-                    <div class="clearfix"></div>
+                    <div class="widget-foot">
+                        <div class="clearfix"></div>
+                        <pagination boundary-links="true"
+                                    on-select-page="vm.pageChanged(page)"
+                                    total-items="vm.attendeeFilteredCount"
+                                    items-per-page="vm.paging.pageSize"
+                                    page="vm.paging.currentPage"
+                                    max-size="vm.paging.maxPagesToShow"
+                                    class="pagination-small"
+                                    previous-text="Prev"
+                                    next-text="Next"
+                                    first-text="First"
+                                    last-text="Last"></pagination>
+                        <div class="clearfix"></div>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
 </section>
