--- a/CC.Web/app/speaker/speakerdetail.html
+++ b/CC.Web/app/speaker/speakerdetail.html
@@ -1,6 +1,21 @@
 ﻿<section class="mainbar" data-ng-controller="speakerdetail as vm">
     <section class="matter">
         <div class="container-fluid">
+            <div>
+                <button class="btn btn-info" data-ng-click="vm.goBack()">
+                    <i class="fa fa-hand-o-left">Back</i>
+                </button>
+                <button class="btn btn-info" data-ng-click="vm.cancel()" data-ng-disabled="!vm.canSave">
+                    <i class="fa fa-undo">Cancel</i>
+                </button>
+                <button class="btn btn-info" data-ng-click="vm.save()" data-ng-disabled="!vm.canSave">
+                    <i class="fa fa-save">Save</i>
+                </button>
+                <span data-ng-show="vm.hasChanges" class="dissolve-animation ng-hide"
+                      title="There are unsaved changes">
+                    <i class="fa fa-asterisk"></i>
+                </span>
+            </div>
             <div class="widget wgreen">
                 <div data-cc-widget-header title="{{vm.getTitle()}}"></div>
                 <div class="widget-content user">
