Add code from part 2 module 05

--- a/CC.Web/index.html
+++ b/CC.Web/index.html
@@ -77,6 +77,7 @@
     <script src="app/speaker/speakerdetail.js"></script>
     <script src="app/attendee/attendees.js"></script>
     <script src="app/session/sessions.js"></script>
+    <script src="app/session/sessiondetail.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
