Add code from part 2 module 06

--- a/CC.Web/app/session/sessiondetail.html
+++ b/CC.Web/app/session/sessiondetail.html
@@ -17,7 +17,8 @@
                 </span>
             </div>
             <div class="widget wgreen">
-                <div data-cc-widget-header title="{{vm.getTitle()}}"></div>
+                <div data-cc-widget-header
+                     title="Edit {{vm.session.title || 'New Session'}}"></div>
                 <div class="widget-content user">
                     <div>
                         <label>Title</label>
