--- a/CC.Web/app/speaker/speakers.html
+++ b/CC.Web/app/speaker/speakers.html
@@ -9,7 +9,10 @@
                            placeholder="live search..." />
                     <div class="btn-group pull-right">
                         <a class="btn btn-info"
-                           data-ng-click="vm.refresh()"><i class="icon-refresh"></i><span>Refresh</span></a>
+                           data-ng-click="vm.refresh()"><i class="glyphicon glyphicon-refresh"></i><span>Refresh</span></a>
+                        <a class="btn btn-info" href="#/speaker/new">
+                            <i class="glyphicon glyphicon-plus"></i><span>Add Speaker</span>
+                        </a>
                     </div>
                 </div>
             </div>
