--- a/CC.Web/app/speaker/speakerdetail.html
+++ b/CC.Web/app/speaker/speakerdetail.html
@@ -17,7 +17,8 @@
                 </span>
             </div>
             <div class="widget wgreen">
-                <div data-cc-widget-header title="{{vm.getTitle()}}"></div>
+                <div data-cc-widget-header
+                     title="Edit {{vm.speaker.fullName || 'New Speaker'}}"></div>
                 <div class="widget-content user">
                     <div>
                         <div>
