--- a/CC.Web/app/session/sessiondetail.html
+++ b/CC.Web/app/session/sessiondetail.html
@@ -11,6 +11,9 @@
                 <button class="btn btn-info" data-ng-click="vm.save()" data-ng-disabled="!vm.canSave">
                     <i class="fa fa-save">Save</i>
                 </button>
+                <button class="btn btn-danger" data-ng-click="vm.deleteSession()">
+                    <i class="fa fa-trash-o">Delete</i>
+                </button>
                 <span data-ng-show="vm.hasChanges" class="dissolve-animation ng-hide"
                       title="There are unsaved changes">
                     <i class="fa fa-asterisk"></i>
