--- a/CC.Web/app/speaker/speakerdetail.html
+++ b/CC.Web/app/speaker/speakerdetail.html
@@ -23,23 +23,23 @@
                     <div>
                         <div>
                             <label>First Name</label>
-                            <input data-ng-model="vm.speaker.firstName" placeholder="First Name" />
+                            <input data-ng-model="vm.speaker.firstName" data-z-validate placeholder="First Name" />
                         </div>
                         <div>
                             <label>Last Name</label>
-                            <input data-ng-model="vm.speaker.lastName" placeholder="Last Name" />
+                            <input data-ng-model="vm.speaker.lastName" data-z-validate placeholder="Last Name" />
                         </div>
                         <div>
                             <label>Email</label>
-                            <input data-ng-model="vm.speaker.email" placeholder="Email" />
+                            <input data-ng-model="vm.speaker.email" data-z-validate placeholder="Email" />
                         </div>
                         <div>
                             <label>Blog</label>
-                            <input data-ng-model="vm.speaker.blog" placeholder="Blog" />
+                            <input data-ng-model="vm.speaker.blog" data-z-validate placeholder="Blog" />
                         </div>
                         <div>
                             <label>Twitter</label>
-                            <input data-ng-model="vm.speaker.twitter" placeholder="Twitter" />
+                            <input data-ng-model="vm.speaker.twitter" data-z-validate placeholder="Twitter" />
                         </div>
                         <div>
                             <img data-cc-img-person="{{vm.speaker.imageSource}}" class="img-polaroid" />
