--- a/CC.Web/index.html
+++ b/CC.Web/index.html
@@ -84,6 +84,7 @@
     <script src="app/services/directives.js"></script>
     <script src="app/services/entityManagerFactory.js"></script>
     <script src="app/services/model.js"></script>
+    <script src="app/services/model.validation.js"></script>
     <script src="app/services/routemediator.js"></script>
 
     <script src="app/services/repositories.js"></script>
