Add code from part 2 module 09

--- a/CC.Web/index.html
+++ b/CC.Web/index.html
@@ -54,6 +54,7 @@
     <script src="scripts/breeze.bridge.angular.js"></script>
     <script src="scripts/breeze.directives.js"></script>
     <script src="scripts/breeze.saveErrorExtensions.js"></script>
+    <script src="scripts/angular.breeze.storagewip.js"></script>
 
     <!-- Bootstrapping -->
     <script src="app/app.js"></script>
