Add code from part 2 module 10

--- a/CC.Web/app/session/sessiondetail.html
+++ b/CC.Web/app/session/sessiondetail.html
@@ -16,7 +16,7 @@
                 </button>
                 <span data-ng-show="vm.hasChanges" class="dissolve-animation ng-hide"
                       title="There are unsaved changes">
-                    <i class="fa fa-asterisk"></i>
+                    <i class="fa fa-asterisk fa-asterisk-alert"></i>
                 </span>
             </div>
             <div class="widget wgreen">
