--- a/CC.Web/index.html
+++ b/CC.Web/index.html
@@ -79,11 +79,13 @@
     <script src="app/attendee/attendees.js"></script>
     <script src="app/session/sessions.js"></script>
     <script src="app/session/sessiondetail.js"></script>
+    <script src="app/wip/wip.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
     <script src="app/services/directives.js"></script>
     <script src="app/services/entityManagerFactory.js"></script>
+    <script src="app/services/helper.js"></script>
     <script src="app/services/model.js"></script>
     <script src="app/services/model.validation.js"></script>
     <script src="app/services/routemediator.js"></script>
