--- a/CC.Web/app/dashboard/dashboard.html
+++ b/CC.Web/app/dashboard/dashboard.html
@@ -80,8 +80,6 @@
                     </div>
                 </div>
             </div>
-
-
             <div class="row-fluid">
                 <div class="col-md-4">
                     <div class="widget wviolet">
@@ -111,6 +109,22 @@
                     </div>
                 </div>
                 <div class="col-md-8">
+                    <div class="widget worange" data-ng-controller="wip as vm">
+                        <div data-cc-widget-header title="{{vm.title}}" subtitle="{{vm.wip.length}}"
+                             allow-collapse="true"></div>
+                        <div class="widget-content">
+                            <div class="widget-content" data-ng-include="'/app/wip/wipwidget.html'">
+
+                            </div>
+                        </div>
+                        <div class="widget-foot">
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row-fluid">
+                <div class="col-md-12">
                     <div class="widget wgreen">
                         <div data-cc-widget-header title="{{vm.news.title}}"
                              allow-collapse="true"></div>
